--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html
+﻿<!DOCTYPE html>
 <!--
 Template Name: Academic Education V2
 Author: <a href="http://www.os-templates.com/">OS Templates</a>
