edit school_synod and nav bar

--- a/pages/business_report.html
+++ b/pages/business_report.html
@@ -59,6 +59,7 @@ Licence URI: http://www.os-templates.com/template-terms
     }
     .list, .list_top{
         font-size: 16px;
+        padding-left: 5%;
     }
     .list{
         padding-bottom: 5px;
@@ -101,7 +102,7 @@ Licence URI: http://www.os-templates.com/template-terms
        <nav class="navbar navbar-inverse">
           <div class="container-fluid">
               <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html">首頁</a>
+                  <a class="navbar-brand" href="../index.html">首頁</a>
               </div>
               <ul class="nav navbar-nav">
                   <li class="dropdown">
@@ -115,7 +116,7 @@ Licence URI: http://www.os-templates.com/template-terms
                               <ul class="dropdown-menu">
                                   <li><a href="http://www.dsa.fju.edu.tw/mentor/index.html">導師輔導工作團隊</a></li>
                                   <li><a href="http://stlc.dsa.fju.edu.tw/stlc/">學生學習工作團隊</a></li>
-                                  <li><a href="pages/full-width.html">學務長室</a></li>
+                                  <li><a href="full-width.html">學務長室</a></li>
                               </ul>
                          </li>                
                           <li><a href="http://life.dsa.fju.edu.tw/">生活輔導組</a></li>                       
@@ -140,7 +141,7 @@ Licence URI: http://www.os-templates.com/template-terms
                           <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a href="#">學務會議</a></li>
+                          <li><a href="school_synod.html">學務會議</a></li>
                           <li><a href="#">業務報告</a></li>
                       </ul>
                   </li>
