--- a/pages/full-width.html
+++ b/pages/full-width.html
@@ -85,7 +85,7 @@ Licence URI: http://www.os-templates.com/template-terms
        <nav class="navbar navbar-inverse">
           <div class="container-fluid">
               <div class="navbar-header">
-                  <a class="navbar-brand" href="index.html">首頁</a>
+                  <a class="navbar-brand" href="../index.html">首頁</a>
               </div>
               <ul class="nav navbar-nav">
                   <li class="dropdown">
@@ -99,7 +99,7 @@ Licence URI: http://www.os-templates.com/template-terms
                               <ul class="dropdown-menu">
                                   <li><a href="http://www.dsa.fju.edu.tw/mentor/index.html">導師輔導工作團隊</a></li>
                                   <li><a href="http://stlc.dsa.fju.edu.tw/stlc/">學生學習工作團隊</a></li>
-                                  <li><a href="pages/full-width.html">學務長室</a></li>
+                                  <li><a href="#">學務長室</a></li>
                               </ul>
                          </li>                
                           <li><a href="http://life.dsa.fju.edu.tw/">生活輔導組</a></li>                       
@@ -124,8 +124,8 @@ Licence URI: http://www.os-templates.com/template-terms
                           <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a href="#">學務會議</a></li>
-                          <li><a href="#">業務報告</a></li>
+                          <li><a href="school_synod.html">學務會議</a></li>
+                          <li><a href="business_report.html">業務報告</a></li>
                       </ul>
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
@@ -205,8 +205,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>李瑀婕 秘書<br>
                         (代理人:鄭津珠)<br>
-                        服務電話: <a href="tel:+886-2-29053174">(02)2905-3174</a><br>
-                        E-mail: <a href="mailto:dsa@mail.fju.edu.tw">dsa@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-3174<br>
+                        E-mail: dsa@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -243,8 +243,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>鄭津珠 小姐<br>
                         (代理人:李瑀婕)<br>
-                        服務電話: <a href="tel:+886-2-29052138">(02)2905-2138</a><br>
-                        E-mail: <a href="mailto:002486@mail.fju.edu.tw">002486@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-2138<br>
+                        E-mail: 002486@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -286,8 +286,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>廖優充 先生<br>
                         (代理人:藍博耀)<br>
-                        服務電話: <a href="tel:+886-2-29056412">(02)2905-6412</a><br>
-                        E-mail: <a href="mailto:044655@mail.fju.edu.tw">044655@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-6412<br>
+                        E-mail: 044655@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -323,8 +323,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>吳宏銘 先生<br>
                         (代理人:廖優充)<br>
-                        服務電話: <a href="tel:+886-2-29053197">(02)2905-3197</a><br>
-                        E-mail: <a href="mailto:043144@mail.fju.edu.tw">043144@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-3197<br>
+                        E-mail: 043144@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -364,8 +364,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>藍博耀 先生<br>
                         (代理人:廖優充)<br>
-                        服務電話: <a href="tel:+886-2-29056411">(02)2905-6411</a><br>
-                        E-mail: <a href="mailto:071158@mail.fju.edu.tw">071158@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-6411<br>
+                        E-mail: 071158@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -398,8 +398,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>周于榛 小姐<br>
                         (代理人:李侑螢)<br>
-                        服務電話: <a href="tel:+886-2-29053865">(02)2905-3865</a><br>
-                        E-mail: <a href="mailto:fj03662@mail.fju.edu.tw">fj03662@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-3865<br>
+                        E-mail: fj03662@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -432,8 +432,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>李侑螢 小姐<br>
                         (代理人:周于榛)<br>
-                        服務電話: <a href="tel:+886-2-29053803">(02)2905-3803</a><br>
-                        E-mail: <a href="mailto:fj03757@mail.fju.edu.tw">fj03757@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-3803<br>
+                        E-mail: fj03757@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -462,8 +462,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>曾筱芸 小姐<br>
                         (代理人:藍博耀)<br>
-                        服務電話: <a href="tel:+886-2-29053956">(02)2905-3956</a><br>
-                        E-mail: <a href="mailto:149138@mail.fju.edu.tw">149138@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-3956<br>
+                        E-mail: 149138@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
@@ -490,8 +490,8 @@ Licence URI: http://www.os-templates.com/template-terms
                 <div class="container center non_button_border">
                     <h2>蔡孟芸 小姐<br>
                         (代理人:曾筱芸)<br>
-                        服務電話: <a href="tel:+886-2-29053779">(02)2905-3779</a><br>
-                        E-mail: <a href="mailto:149792@mail.fju.edu.tw">149792@mail.fju.edu.tw</a>
+                        服務電話: (02)2905-3779<br>
+                        E-mail: 149792@mail.fju.edu.tw
                     </h2>
                 </div>
             </div>
