--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ Licence URI: http://www.os-templates.com/template-terms
                           <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a href="#">學務會議</a></li>
-                          <li><a href="#">業務報告</a></li>
+                          <li><a href="/pages/school_synod.html">學務會議</a></li>
+                          <li><a href="/pages/business_report.html">業務報告</a></li>
                       </ul>
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
