--- a/pages/school_synod.html
+++ b/pages/school_synod.html
@@ -17,11 +17,8 @@ Licence URI: http://www.os-templates.com/template-terms
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 <style>
-    p, ol, h2{
+    p{
         color: black;
-    }
-    ol{
-        padding: 8px;
     }
     .center{
         text-align: center;
@@ -29,29 +26,12 @@ Licence URI: http://www.os-templates.com/template-terms
     .top{
         margin-top: 3%
     }
-    .goose_bgc, .blue_bgc{
+    .blue_bgc{
         padding: 2%;
         border-radius: 20px;
     }
-    .goose_bgc{
-        background-color: cornsilk;
-    }
     .blue_bgc{
         background-color: darkseagreen;
-    }
-    .indent{
-        margin-left: 5em;
-    }
-    .img_width{
-        width: 200px;
-    }
-    .flex-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .non_button_border{
-        padding-bottom: 0px;
     }
     .title{
         font-size: 16px;
