--- a/pages/self_introduction.html
+++ b/pages/self_introduction.html
@@ -124,8 +124,8 @@ Licence URI: http://www.os-templates.com/template-terms
                           <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a href="school_synod.html">學務會議</a></li>
-                          <li><a href="business_report.html">業務報告</a></li>
+                          <li><a href="/dsareport/dsameeting.html">學務會議</a></li>
+                          <li><a href="/dsareport/business_report.html">業務報告</a></li>
                       </ul>
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
