--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Licence URI: http://www.os-templates.com/template-terms
                               <ul class="dropdown-menu">
                                   <li><a href="http://www.dsa.fju.edu.tw/mentor/index.html">導師輔導工作團隊</a></li>
                                   <li><a href="http://stlc.dsa.fju.edu.tw/stlc/">學生學習工作團隊</a></li>
-                                  <li><a href="pages/full-width.html">學務長室</a></li>
+                                  <li><a href="pages/self_introduction.html">學務長室</a></li>
                               </ul>
                          </li>                
                           <li><a href="http://life.dsa.fju.edu.tw/">生活輔導組</a></li>                       
@@ -100,8 +100,8 @@ Licence URI: http://www.os-templates.com/template-terms
                           <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a href="/pages/school_synod.html">學務會議</a></li>
-                          <li><a href="/pages/business_report.html">業務報告</a></li>
+                          <li><a href="/dsareport/dsameeting.html">學務會議</a></li>
+                          <li><a href="/dsareport/business_report.html">業務報告</a></li>
                       </ul>
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
