--- a/dsareport/business_report.html
+++ b/dsareport/business_report.html
@@ -119,7 +119,7 @@ Licence URI: http://www.os-templates.com/template-terms
                           <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu">
-                          <li><a href="school_synod.html">學務會議</a></li>
+                          <li><a href="dsameeting.html">學務會議</a></li>
                           <li><a href="#">業務報告</a></li>
                       </ul>
                   </li>
