--- a/dsareport/dsameeting.html
+++ b/dsareport/dsameeting.html
@@ -120,7 +120,7 @@ Licence URI: http://www.os-templates.com/template-terms
                       </a>
                       <ul class="dropdown-menu">
                           <li><a href="#">學務會議</a></li>
-                          <li><a href="/dsareport/business_report.html">業務報告</a></li>
+                          <li><a href="business_report.html">業務報告</a></li>
                       </ul>
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
