--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Licence URI: http://www.os-templates.com/template-terms
                               <ul class="dropdown-menu">
                                   <li><a href="http://www.dsa.fju.edu.tw/mentor/index.html">導師輔導工作團隊</a></li>
                                   <li><a href="http://stlc.dsa.fju.edu.tw/stlc/">學生學習工作團隊</a></li>
-                                  <li><a href="pages/self_introduction.html">學務長室</a></li>
+                                  <li><a href="self_introduction.html">學務長室</a></li>
                               </ul>
                          </li>                
                           <li><a href="http://life.dsa.fju.edu.tw/">生活輔導組</a></li>                       
@@ -105,7 +105,7 @@ Licence URI: http://www.os-templates.com/template-terms
                       </ul>
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
-                  <li><a href="#">法規專區</a></li>
+                  <li><a href="rule.html">法規專區</a></li>
                   <li><a href="#">ENGLISH</a></li>
               </ul>
           </div>
