--- a/self_introduction.html
+++ b/self_introduction.html
@@ -15,7 +15,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 <style>
     p, ol, h2{
         color: black;
@@ -129,7 +129,7 @@ Licence URI: http://www.os-templates.com/template-terms
                       </ul>
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
-                  <li><a href="#">法規專區</a></li>
+                  <li><a href="rule.html">法規專區</a></li>
                   <li><a href="#">ENGLISH</a></li>
               </ul>
           </div>
@@ -147,7 +147,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E9%99%B3%E8%8B%A5%E7%90%B3.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E9%99%B3%E8%8B%A5%E7%90%B3.jpg">
                 </div>
                 <div class="container center non_button_border"><h2>陳若琳 學務長</h2></div>
             </div>
@@ -175,7 +175,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E9%83%AD%E5%AD%9F%E6%80%A1.jpg"></div>
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E9%83%AD%E5%AD%9F%E6%80%A1.jpg"></div>
                 <div class="container center non_button_border"><h2>郭孟怡 主任導師</h2></div>
             </div>
         </div>
@@ -201,7 +201,7 @@ Licence URI: http://www.os-templates.com/template-terms
       <div class="group top blue_bgc">
         <div class="one_third first">
             <div class="flex-container">
-                <img class="imgl borderedbox" src="../images/demo/introduction/%E7%91%80%E5%A9%95%E7%A7%98%E6%9B%B8.jpg">
+                <img class="imgl borderedbox" src="images/demo/introduction/%E7%91%80%E5%A9%95%E7%A7%98%E6%9B%B8.jpg">
                 <div class="container center non_button_border">
                     <h2>李瑀婕 秘書<br>
                         (代理人:鄭津珠)<br>
@@ -238,7 +238,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E5%B0%8F%E7%8F%A0%E5%A7%90.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E5%B0%8F%E7%8F%A0%E5%A7%90.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>鄭津珠 小姐<br>
@@ -281,7 +281,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E5%BB%96%E5%84%AA%E5%85%85.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E5%BB%96%E5%84%AA%E5%85%85.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>廖優充 先生<br>
@@ -318,7 +318,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E5%90%B3%E5%AE%8F%E9%8A%98.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E5%90%B3%E5%AE%8F%E9%8A%98.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>吳宏銘 先生<br>
@@ -359,7 +359,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E8%97%8D%E5%8D%9A%E8%80%80.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E8%97%8D%E5%8D%9A%E8%80%80.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>藍博耀 先生<br>
@@ -393,7 +393,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E5%91%A8%E4%BA%8E%E6%A6%9B.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E5%91%A8%E4%BA%8E%E6%A6%9B.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>周于榛 小姐<br>
@@ -427,7 +427,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E6%9D%8E%E4%BE%91%E8%9E%A2.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E6%9D%8E%E4%BE%91%E8%9E%A2.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>李侑螢 小姐<br>
@@ -457,7 +457,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E6%9B%BE%E7%AD%B1%E8%8A%B8.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E6%9B%BE%E7%AD%B1%E8%8A%B8.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>曾筱芸 小姐<br>
@@ -485,7 +485,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <div class="one_third first">
             <div class="flex-container">
                 <div>
-                    <img class="imgl borderedbox img_width" src="../images/demo/introduction/%E8%94%A1%E5%AD%9F%E8%8A%B8.jpg">
+                    <img class="imgl borderedbox img_width" src="images/demo/introduction/%E8%94%A1%E5%AD%9F%E8%8A%B8.jpg">
                 </div>
                 <div class="container center non_button_border">
                     <h2>蔡孟芸 小姐<br>
