--- a/dsareport/dsameeting.html
+++ b/dsareport/dsameeting.html
@@ -265,8 +265,8 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper row5">
   <div id="copyright" class="clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    <p class="fl_left copyright_fontcolor">輔仁大學學生事務處  服務電話：2905-3174  傳真：2905-3174   辦公室：舒德樓4樓</p><br/>
+    <p class="copyright_fontcolor">Copyright ©2007-2020 Fu Jen Catholic University Office of  Student Affairs All Right Reserved</p>
     <!-- ################################################################################################ --> 
   </div>
 </div>
