--- a/rule.html
+++ b/rule.html
@@ -45,6 +45,7 @@ Licence URI: http://www.os-templates.com/template-terms
     .list_top{
         padding-top: 25px;
     }
+    
 </style>
 </head>
 <body id="top">
@@ -214,7 +215,7 @@ Licence URI: http://www.os-templates.com/template-terms
                 </div>
             </div>
             <div class="three_quarter">
-                <p><a href="http://irc.dsa.fju.edu.tw/laws.html">http://irc.dsa.fju.edu.tw/laws.html</a></p>
+                <p><a href="http://irc.dsa.fju.edu.tw/download.html#tabs1-2h_tab2">http://irc.dsa.fju.edu.tw/download.html#tabs1-2h_tab2</a></p>
             </div>
         </div>
         
@@ -284,8 +285,8 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper row5">
   <div id="copyright" class="clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    <p class="fl_left copyright_fontcolor">輔仁大學學生事務處  服務電話：2905-3174  傳真：2905-3174   辦公室：舒德樓4樓</p><br/>
+    <p class="copyright_fontcolor">Copyright ©2007-2020 Fu Jen Catholic University Office of  Student Affairs All Right Reserved</p>
     <!-- ################################################################################################ --> 
   </div>
 </div>
