--- a/dsareport/dsameeting.html
+++ b/dsareport/dsameeting.html
@@ -123,7 +123,7 @@ Licence URI: http://www.os-templates.com/template-terms
                           <li><a href="business_report.html">業務報告</a></li>
                       </ul>
                   </li>
-                  <li><a href="#">學生事務與輔導經費</a></li>
+                  <li><a href="../budget.html">學生事務與輔導經費</a></li>
                   <li><a href="../rule.html">法規專區</a></li>
                   <li><a href="#">ENGLISH</a></li>
               </ul>
