navbar add link.

--- a/budget.html
+++ b/budget.html
@@ -126,7 +126,7 @@ Licence URI: http://www.os-templates.com/template-terms
                   </li>
                   <li><a href="#">學生事務與輔導經費</a></li>
                   <li><a href="rule.html">法規專區</a></li>
-                  <li><a href="#">ENGLISH</a></li>
+                  <li><a href="http://www.dsa.fju.edu.tw/english/index-life.html">ENGLISH</a></li>
               </ul>
           </div>
       </nav>
