--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@ Licence URI: http://www.os-templates.com/template-terms
         font-size: 16px;
         color: #55ABDA;
     }
+    .align{
+        align-self: center;
+        align-content: center;
+        align-items: center;
+        vertical-align: center;
+        
+    }
 
  
   </style>
@@ -123,7 +130,7 @@ Licence URI: http://www.os-templates.com/template-terms
                   </li>
                   <li><a href="budget.html">學生事務與輔導經費</a></li>
                   <li><a href="rule.html">法規專區</a></li>
-                  <li><a href="#">ENGLISH</a></li>
+                  <li><a href="http://www.dsa.fju.edu.tw/english/index-life.html">ENGLISH</a></li>
               </ul>
           </div>
       </nav>
@@ -259,7 +266,7 @@ Licence URI: http://www.os-templates.com/template-terms
                        
                         <div class="two_quarter first">
                             <div class="sdb_holder">
-                                <div class="imgl borderedbox"><img src="images/demo/120x120.gif" alt=""></div>
+                                <div class="imgl borderedbox "><img src="images/demo/120x120.gif" alt=""></div>
                                 <p class="border title">助學措施</p>
                                 <ol>
                                     <li class="indent"><a href="http://life.dsa.fju.edu.tw/scholarship.html" class="colorblack">獎助學金</a></li>
