--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Licence URI: http://www.os-templates.com/template-terms
                 </div>
             </div>-->
                                 <div class="sdb_holder">
-                                    <h6>相關連結</h6>
+                                    <h6>快速連結</h6>
                                     <ul class="nospace quickinfo">
                                         <li class="clear"><a href="https://fjugoldenlearning.wixsite.com/fju-posml"><img src="http://www.dsa.fju.edu.tw/輔大學務處經典學習_LOGO-超連結.png" alt=""> 深耕學習</a></li>
                                         <li class="clear"><a href="http://stlc.dsa.fju.edu.tw/stlc/fjuline@.html"><img src="http://www.dsa.fju.edu.tw/line@icon.png" alt=""> 輔仁學務LINE@服務網</a></li>
