--- a/rule.html
+++ b/rule.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Academic Education V2 | Pages | Full Width</title>
+<title>輔仁大學學生事務處-法規專區</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
@@ -125,7 +125,7 @@ Licence URI: http://www.os-templates.com/template-terms
                       </ul>
                   </li>
                   <li><a href="budget.html">學生事務與輔導經費</a></li>
-                  <li><a href="#">法規專區</a></li>
+                  <li><a href="rule.html">法規專區</a></li>
                   <li><a href="http://www.dsa.fju.edu.tw/english/index-life.html">ENGLISH</a></li>
               </ul>
           </div>
