--- a/self_introduction.html
+++ b/self_introduction.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Academic Education V2 | Pages | Full Width</title>
+<title>輔仁大學學生事務處-人士簡介</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
@@ -85,7 +85,7 @@ Licence URI: http://www.os-templates.com/template-terms
        <nav class="navbar navbar-inverse">
           <div class="container-fluid">
               <div class="navbar-header">
-                  <a class="navbar-brand" href="../index.html">首頁</a>
+                  <a class="navbar-brand" href="index.html">首頁</a>
               </div>
               <ul class="nav navbar-nav">
                   <li class="dropdown">
