--- a/budget.html
+++ b/budget.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Academic Education V2 | Pages | Full Width</title>
+<title>輔仁大學學生事務處-輔導經費</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
