--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<title>Academic Education V2</title>
+<title>輔仁大學學生事務處</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
@@ -97,7 +97,7 @@ Licence URI: http://www.os-templates.com/template-terms
                           <li  class="dropdown-submenu">
                           <a href="http://www.dsa.fju.edu.tw/">處本部</a>
                               <ul class="dropdown-menu">
-                                  <li><a href="http://www.dsa.fju.edu.tw/mentor/index.html">導師輔導工作團隊</a></li>
+                                  <li><a href="http://mentor.dsa.fju.edu.tw/index.html">導師輔導工作團隊</a></li>
                                   <li><a href="http://stlc.dsa.fju.edu.tw/stlc/">學生學習工作團隊</a></li>
                                   <li><a href="self_introduction.html">學務長室</a></li>
                               </ul>
@@ -200,39 +200,38 @@ Licence URI: http://www.os-templates.com/template-terms
                     <!-- main body -->
                     <!-- ################################################################################################ -->
                     <div class="group btmspace-30">
-                        <!-- Left Column -->
-                        <!--<div class="one_quarter first">-->
-                            <!-- ################################################################################################ -->
-                            <!--<ul class="nospace">
-                                <li class="btmspace-15"><a href="#"><em class="heading">Prospective Students</em> <img class="borderedbox" src="images/demo/220x95.gif" alt=""></a></li>
-                                <li class="btmspace-15"><a href="#"><em class="heading">Current Students</em> <img class="borderedbox" src="images/demo/220x95.gif" alt=""></a></li>
-                                <li class="btmspace-15"><a href="#"><em class="heading">International Students</em> <img class="borderedbox" src="images/demo/220x95.gif" alt=""></a></li>
-                                <li><a href="#"><em class="heading">Alumni</em> <img class="borderedbox" src="images/demo/220x95.gif" alt=""></a></li>
-                            </ul>-->
-                            <!-- ################################################################################################ -->
-                        <!--  </div>-->
-                        <!-- / Left Column -->
-                        <!-- Middle Column -->
+                         <!-- Middle Column -->
                         <div class="two_third">
                             <!-- ################################################################################################ -->
                             <h2>最新消息</h2>
                             <ul class="nospace listing">
                                 <li class="clear">
-                                    <!--<div class="imgl borderedbox"><img src="images/demo/120x120.gif" alt=""></div>
-                                    <p class="nospace btmspace-15"><a href="#">Sentumquisque morbi dui congue.</a></p>-->
-                                    <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a></p>
+                                    <p>
+                                        <span  style="font-family: 標楷體; color: black">                                       
+                                            <span style=" color: red">【恭賀】</span>本校教務長王英洲教授榮獲<font color="red">109年教育部友善校園特殊貢獻人員獎</font>全國大專校院唯一主管獲獎(<a href="https://www.fju.edu.tw/awardDetail.jsp?newsID=6362" target="_blank">連結</a>)。
+                                        </span>
+                                   </p>
                                 </li>
                                 <li class="clear">
-                                    <!--<div class="imgl borderedbox"><img src="images/demo/120x120.gif" alt=""></div>
-                                    <p class="nospace btmspace-15"><a href="#">Sentumquisque morbi dui congue.</a></p>-->
-                                    <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files.</p>
+                                   <p>
+                                        <span  style="font-family: 標楷體; color: black">
+                                            <span style=" color: red">【恭賀】</span>
+                                           本校僑陸組林意翔同仁 榮獲<font color="red">108年度境外學生輔導工作績優人員獎</font>, 得獎資訊請見(<a href="https://epaper.edu.tw/news.aspx?news_sn=69297" target="_blank">教育部電子報</a>)。
+                                        </span>
+                                    </p>
                                 </li>
                                 <li class="clear">
-                                    <!--<div class="imgl borderedbox"><img src="images/demo/120x120.gif" alt=""></div>
-                                    <p class="nospace btmspace-15"><a href="#">Sentumquisque morbi dui congue.</a></p>-->
-                                    <p>For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Attincidunt vel nam a maurisus lacinia consectetus magnisl sed ac morbi. Inmaurisus habitur pretium eu et ac vest penatibus id lacus parturpis.</p>
-                                </li>
+                                    <p>
+                                        <span style="font-family: 標楷體; color: black">
+                                            <span style=" color: red">【恭賀】</span>
+                                            同舟共濟服務社社長林憶㤈同學榮獲「第27屆傑人會傑青獎－傑出社團領袖」。                                     
+                                        </span>
+                                    </p>
+                                </li>   
                             </ul>
+                            <ul>
+                            <p align="right"><a href="latest_news.html">查看更多最新消息</a></p></ul>
+                            
                             <!--<p class="right"><a href="#">Click here to view all of the latest news and events &raquo;</a></p>-->
                             <!-- ################################################################################################ -->
                         </div>
@@ -242,13 +241,7 @@ Licence URI: http://www.os-templates.com/template-terms
                             <!-- Right Column -->
                             <div class="one_quarter sidebar">
                                 <!-- ################################################################################################ -->
-                                <!--<div class="sdb_holder">
-                <h6>Virtual Tour</h6>
-                <div class="mediacontainer">
-                    <img src="images/demo/video.gif" alt="">
-                    <p><a href="#">View More Tour Videos Here</a></p>
-                </div>
-            </div>-->
+    
                                 <div class="sdb_holder">
                                     <h6>快速連結</h6>
                                     <ul class="nospace quickinfo">
